--- a/Chest X-Ray Image Classifier.ipynb
+++ b/Chest X-Ray Image Classifier.ipynb
@@ -21,6 +21,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "016aa183-2c2f-442c-b343-ab16f649bad1",
+   "metadata": {},
+   "source": [
+    "# Description\n",
+    "\n",
+    "This notebook pulls in and flattens compressed image files, then utilizes a support vector machine to classify. \n",
+    "\n",
+    "I divided into the following sections:\n",
+    "\n",
+    "- 1) Image preprocessing\n",
+    "- 2) Hyperparameter optimization and fitting\n",
+    "- 3) Prediction and results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "159ff130-3d98-4f10-9add-d556a4356f0c",
+   "metadata": {},
+   "source": [
+    "# 1) Image Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "581746e7-dba9-4662-b712-47039fa83325",
+   "metadata": {},
+   "source": [
+    "- The following section reads in data from ./Data_compressed folder and converts the images into a flat numpy array using tensorflow"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "a184af2f-d045-4727-90a9-e590983ffcb5",
@@ -57,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "90e10368-c5ca-4af5-99f5-7127c19274da",
    "metadata": {},
    "outputs": [],
@@ -66,13 +98,15 @@
     "    num_batches = len(data)\n",
     "    features_list = []\n",
     "    labels_list = []\n",
-    "    \n",
+    "\n",
+    "    #Loop through batches of images in each image silo\n",
     "    for i in range(num_batches):\n",
     "        pixel_data, label = train_data.next()\n",
     "        pixel_data_flat = pixel_data.reshape(pixel_data.shape[0], -1)  # Flatten images\n",
     "        features_list.append(pixel_data_flat)\n",
     "        labels_list.append(np.argmax(label, axis=1))\n",
-    "        \n",
+    "\n",
+    "    #Compile image data and label data into numpy array\n",
     "    images_data = np.vstack(features_list) \n",
     "    labels = np.concatenate(labels_list)\n",
     "    return images_data, labels"
@@ -91,9 +125,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "674dad8e-c613-4184-9b5e-82c2c9cf2f0c",
+   "metadata": {},
+   "source": [
+    "# 2) Hyperparameter Optimization and Fitting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58251e7a-e12c-4ec9-a8d9-a963939006b8",
+   "metadata": {},
+   "source": [
+    "- The following section utilizes a Support Vector Classifier with a blend of hyperparameters to determine the best estimator"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "5b16eebe-3fdb-4d8d-95ec-baefdd76fddb",
+   "execution_count": 24,
+   "id": "7c19d4e8-d52a-48d8-8c0d-f90a0780bdf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best accuracy estimator:  SVC(coef0=1.0, kernel='poly')\n",
+      "Best accuracy estimator:  0.9405648489843832\n",
+      "Best accuracy estimator:  {'coef0': 1.0, 'degree': 3, 'gamma': 'scale', 'kernel': 'poly'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create hyperparameter dictionary for reference\n",
+    "grid_params = {\"kernel\": [\"poly\", \"rbf\",\"sigmoid\"],\n",
+    "               \"degree\": [3, 5, 7],\n",
+    "               \"gamma\": [\"scale\", \"auto\"],\n",
+    "               \"coef0\": [0.0, 1.0]\n",
+    "}\n",
+    "\n",
+    "# Create SVC model instance\n",
+    "svc = SVC()\n",
+    "\n",
+    "# Determine best estimator using cross validation\n",
+    "grid_svc_accuracy = GridSearchCV(svc, grid_params, scoring=\"accuracy\")\n",
+    "\n",
+    "# Fit the model\n",
+    "grid_svc_accuracy.fit(train_X, train_y)\n",
+    "\n",
+    "# Display results\n",
+    "print(\"Best accuracy estimator: \", grid_svc_accuracy.best_estimator_)\n",
+    "print(\"Best accuracy estimator: \", grid_svc_accuracy.best_score_)\n",
+    "print(\"Best accuracy estimator: \", grid_svc_accuracy.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6001e23-1a71-4670-a058-1d05b0e1f6b6",
+   "metadata": {},
+   "source": [
+    "# 3) Prediction and Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7f23da1-e605-4c07-845d-57214b0637f3",
+   "metadata": {},
+   "source": [
+    "- The final section using the fitted model to make predictions against new testing data, displaying results in a confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "fab75b26-49c2-421b-9946-9f96a29a11cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,44 +224,7 @@
     "        ax.set_title('Test Set Confusion Matrix')\n",
     "    cbar = ax.collections[0].colorbar\n",
     "    cbar.set_ticks([0, .25,0.50, .75, 1])\n",
-    "    cbar.set_ticklabels(['0%', '25%','50%', '75%', '100%'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "7c19d4e8-d52a-48d8-8c0d-f90a0780bdf4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hi\n",
-      "Best accuracy estimator:  SVC(coef0=1.0, kernel='poly')\n",
-      "Best accuracy estimator:  0.9405648489843832\n",
-      "Best accuracy estimator:  {'coef0': 1.0, 'degree': 3, 'gamma': 'scale', 'kernel': 'poly'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "grid_params = {\"kernel\": [\"poly\", \"rbf\",\"sigmoid\"],\n",
-    "               \"degree\": [3, 5, 7],\n",
-    "               \"gamma\": [\"scale\", \"auto\"],\n",
-    "               \"coef0\": [0.0, 1.0]\n",
-    "}\n",
-    "#switch to looking at pneumonia vs tuberculosis and normal vs covid or covid vs pneumonia or normal vs tuberculosis\n",
-    "svc = SVC()\n",
-    "# grid_svc_recall = GridSearchCV(svc, grid_params, scoring=\"recall\")\n",
-    "grid_svc_accuracy = GridSearchCV(svc, grid_params, scoring=\"accuracy\")\n",
-    "# grid_svc_recall.fit(train_X, train_y)\n",
-    "grid_svc_accuracy.fit(train_X, train_y)\n",
-    "# print(\"Best recall estimator: \", grid_svc_recall.best_estimator_)\n",
-    "print(\"Best accuracy estimator: \", grid_svc_accuracy.best_estimator_)\n",
-    "# print(\"Best recall estimator: \", grid_svc_recall.best_score_)\n",
-    "print(\"Best accuracy estimator: \", grid_svc_accuracy.best_score_)\n",
-    "# print(\"Best recall estimator: \", grid_svc_recall.best_params_)\n",
-    "print(\"Best accuracy estimator: \", grid_svc_accuracy.best_params_)"
+    "    cbar.set_ticklabels(['0%', '25%','50%', '75%', '100%'])"
    ]
   },
   {
